# GPU-Image-Classifier

./: .gitignore  README.md  main.py  pyproject.toml
app/: __init__.py  inference_app.py
benchmarking/: __init__.py  image_normalization_benchmark.py
cuda_kernels/: __init__.py  image_normalization.cpp  image_normalization.py  image_normalization_kernel.cu
data/: __init__.py  dataset_manager.py
evaluation/: metrics.py  report.py
models/: __init__.py  classical_models.py  pytorch_models.py
outputs/metrics/: cifar10_resnet18_history.csv  cifar10_resnet18_results.json  cifar10_resnet18_summary.csv  classical_results.json  classical_summary.csv  fashion_mnist_simple_cnn_history.csv  fashion_mnist_simple_cnn_results.json  fashion_mnist_simple_cnn_summary.csv  image_normalization_b16_c3_h64_w64_benchmark.csv  image_normalization_b16_c3_h64_w64_benchmark.json  image_normalization_b64_c3_h224_w224_benchmark.csv  image_normalization_b64_c3_h224_w224_benchmark.json  image_normalization_b8_c3_h64_w64_benchmark.csv  image_normalization_b8_c3_h64_w64_benchmark.json
outputs/reports/: run_summary.md
training/: classical_pipeline.py  pytorch_pipeline.py
triton_kernels/: __init__.py  image_normalization.py
utils/: __init__.py  config.py  io_utils.py  torch_utils.py
