[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpu-accelerated-image-classification"
version = "0.1.0"
description = "Production-quality image classification system with PyTorch, CUDA, Triton, and scikit-learn baselines."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "joblib>=1.3",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "torch>=2.2",
    "torchvision>=0.17",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
gpu = [
    "ninja>=1.11",
    "triton>=3.0; platform_system == 'Linux'",
]
demo = [
    "streamlit>=1.32",
    "Pillow>=10.0",
]

[tool.setuptools.packages.find]
include = ["app", "benchmarking", "cuda_kernels", "data", "evaluation", "models", "training", "triton_kernels", "utils"]

[tool.ruff]
line-length = 100
target-version = "py39"
